@startuml

title __BACKGROUNDJOB's Class Diagram__\n

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.BackgroundJob {
        class BackgroundDataReceiver {
            ~ runnableMicrocontrollers : List<BaseMicrocontroller>
            ~ baseAnalyses : List<BaseAnalysis>
            ~ baseSensors : List<BaseSensor>
            ~ basePlugins : List<BasePlugin>
            + doInBackground()
            + onSuccess()
            + onError()
        }
      }
    }
  }
  

  package sud_tanj.com.icare {
    package sud_tanj.com.icare.Backend {
      package sud_tanj.com.icare.Backend.BackgroundJob {
        class BackgroundRunnable {
            {static} + BACKGROUND_EXECUTION_TIME : int
            - context : Context
            {static} # backgroundDataReceive : BackgroundDataReceiver
            {static} # weakHandler : WeakHandler
            {static} # backgroundRunnable : BackgroundRunnable
            {static} + init()
            {static} + reRunBackgroundService()
            + run()
            + BackgroundRunnable()
        }
      }
    }
  }
  

  BackgroundDataReceiver -up-|> BackgroundWork
  BackgroundDataReceiver -up-|> Completion
  BackgroundRunnable -up-|> Runnable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
